manifests/bootstrapping/06-argocd/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-web
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`argocd.k3s.danmanners.io`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
      middlewares:
        - name: http-https-redirectscheme
          namespace: kube-system
    - match: Host(`argocd.danmanners.com`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
      middlewares:
        - name: http-https-redirectscheme
          namespace: kube-system
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.k3s.danmanners.io`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
    - match: Host(`argocd.danmanners.com`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
  tls:
    secretName: argocd-k3s-cert
